11-kubernetes-ingress-configmaps-secrets/03-ingress/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yatri-frontend
  labels:
    app: yatri-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yatri-frontend
  template:
    metadata:
      labels:
        app: yatri-frontend
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: yatri-frontend-html
---
apiVersion: v1
kind: Service
metadata:
  name: yatri-frontend-service
spec:
  type: ClusterIP
  selector:
    app: yatri-frontend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yatri-backend
  labels:
    app: yatri-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yatri-backend
  template:
    metadata:
      labels:
        app: yatri-backend
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: yatri-backend-html
---
apiVersion: v1
kind: Service
metadata:
  name: yatri-backend-service
spec:
  type: ClusterIP
  selector:
    app: yatri-backend
  ports:
    - port: 80
      targetPort: 80
